<resources>

    <string name="open_gpg_tip">应用需要GPS功能，请打开定位服务才可继续。</string>
    <string name="request_location_permission">应用需要获取位置信息才能正常工作，请授予！</string>
    <string name="request_sdcard_permission">应用需要获取读写内存功能才能正常工作，请授予！</string>
    <string name="request_contacts_permission">应用需要获取通讯录权限才能正常工作，请授予！</string>
    <string name="request_microphone_permission">应用需要获取麦克风权限才能正常工作，请授予！</string>
    <string name="request_read_phone_state_permission">应用需要获取电话状态权限才能正常工作，请授予！</string>
    <string name="request_camera_permission">应用需要获取相机权限才能正常工作，请授予！</string>
    <string name="request_access_coarse_location_permission">应用需要获取位置权限才能正常工作，请授予！</string>
    <string name="request_write_setting_permission">应用需要获取修改系统配置权限才能正常工作，请授予！</string>
    <string name="request_access_call_phone_permission">应用需要拨打电话权限才能正常工作，请授予！</string>
    <string name="request_permission_modify_audio_settings">允许程序修改声音设置信息</string>
    <string name="request_permission_system_alert_window">允许程序显示系统窗口</string>
    <string name="request_permission_wake_lock">允许程序在手机屏幕关闭后后台进程仍然运行</string>
    <string name="grant">授予</string>
    <string name="dialog_exit">退出</string>
    <string name="dialog_tips">提示</string>
    <string name="one_more_exit">再按一次退出</string>
    <string name="sure">确定</string>
    <string name="phone_info">40045421548</string>
    <string name="send_code">获取验证码</string>
    <string name="get_code">请输入验证码</string>
    <string name="dialog_return">返回</string>
    <string name="dialog_confirm">确认</string>

    <string name="packet_details">套餐详情</string>

    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="please_enter_fill_phone">请填写正确的手机号</string>
    <string name="operators">运营商</string>
    <string name="network_system">网络制式</string>
    <string name="sim_card_type">SIM卡类型</string>
    <string name="discharge_pattern">流量类型</string>
    <string name="package_selection">套餐选择</string>
    <string name="the_length_of_the_package">套餐时长</string>
    <string name="usage_scenario">使用场景</string>
    <string name="order_quantity">订购数量</string>
    <string name="consignee_information">收货人信息</string>
    <string name="immediate_purchase">立即购买</string>
    <string name="mobile_communication">移动</string>
    <string name="uni_com_communication">联通</string>
    <string name="Telecom_communication">电信</string>
    <string name="_2g">2G</string>
    <string name="_3g">3G</string>
    <string name="_4g">4G</string>
    <string name="month_count">个月</string>
    <string name="add">新增</string>
    <string name="contact_people">联系人</string>
    <string name="contact_phone_number">联系电话</string>
    <string name="area">所在地区</string>
    <string name="street">街道</string>
    <string name="delete_current_address">删除当前地址</string>
    <string name="input_type">请填写正确的格式</string>

    <string name="meal_info">套餐信息</string>
    <string name="call_message">短信</string>
    <string name="intelligent_diagnosis">智能诊断</string>
    <string name="search_message">搜索短信</string>
    <string name="receive_message">收件箱</string>
    <string name="send_message">发件箱</string>
    <string name="all_select">全选</string>
    <string name="delete">删除</string>
    <string name="write_message">写信息</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="wait_result">等待结果…</string>
    <string name="have_open_call_function">已开启通话功能</string>
    <string name="have_open_net_function">已开启上网功能</string>
    <string name="is_have_using_meal">是否有使用套餐</string>
    <string name="activation_state">激活状态</string>
    <string name="is_it_a_valid_card">是否是有效卡</string>
    <string name="diagnostic_recommendations">诊断建议</string>
    <string name="detection_result">检测结果：</string>
    <string name="no_use">暂未使用</string>
    <string name="package_purchase">套餐购买</string>
    <string name="flow_overlay_packet">流量叠加</string>
    <string name="voice_overlay_packet">语音叠加</string>
    <string name="current_card_number">当前卡号</string>
    <string name="device_iccid">设备ICCID</string>
    <string name="card_state">卡状态：</string>
    <string name="flow_state">流量状态：</string>
    <string name="voice_state">语音状态：</string>
    <string name="all_flow">总流量：</string>
    <string name="remain_flow">剩余流量</string>
    <string name="voice_remain">剩余语音</string>
    <string name="voice_all">总流量：</string>
    <string name="flow_has_use">已使用：</string>
    <string name="purchase_confirmation_info">亲爱的用户，充值/购买前请认真核对卡号信息，以免发生误充，一旦误充，充值/购买金额将无法退还！</string>
    <string name="has_confirmation">已确认</string>
    <string name="price">售价</string>
    <string name="re_diagnosis">重新诊断</string>
    <string name="card_diagnosis">卡状态诊断</string>
    <string name="white_list_diagnosis">白名单诊断</string>
    <string name="flow_usage_detection">流量使用情况检测</string>
    <string name="update_traffic_data">更新流量数据</string>
    <string name="speech_usage_detection">语音使用情况检测</string>
    <string name="update_voice_data">更新语音数据</string>
    <string name="diagnosis_of_card_package">卡套餐诊断</string>
    <string name="contact">通讯录</string>

    <string name="fragmentation_stack_view">Stack</string>
    <string name="fragmentation_stack_help">*: Not in backStack\n☀: Visible</string>
</resources>
