<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/call_message_tab"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/receive_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableBottom="@drawable/bottom_index_selector"
                android:text="@string/receive_message"
                android:textColor="@color/color_4d4d4d"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/send_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:button="@null"
                android:drawableBottom="@drawable/bottom_index_selector"
                android:text="@string/send_message"
                android:textColor="@color/color_4d4d4d"
                android:textSize="14sp" />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/tb_line_shape_0d0" />

        <FrameLayout
            android:id="@+id/message_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/edit_message_area"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingLeft="16dp"
            android:visibility="gone">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:button="@drawable/check_circle_shape"
                android:padding="10dp"
                android:text="@string/all_select"
                android:textColor="@color/color_333333"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/delete_message"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="17dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:textColor="@color/color_4d4d4d"
                    android:textSize="14sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/write_message_area"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <LinearLayout
                android:id="@+id/message_send_icon"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_centerInParent="true"
                android:background="@mipmap/message_write"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@mipmap/write_tag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/write_message"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>
        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>