<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="14dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="14dp"
    android:background="@drawable/meal_bg_shape"
    android:orientation="vertical"
    tools:showIn="@layout/meal_info_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="14dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/operator_information"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/china_mobile" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_card_number"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/device_iccid"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/current_card_number_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/current_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="172 2035 0005"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/card_show_icon" />
            </LinearLayout>

            <TextView
                android:id="@+id/device_icc_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="89860 2F219 18800 10314"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="17dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_state"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/card_state_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FFFFDD51"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flow_state"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/flow_state_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FFFFDD51"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voice_state"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/voice_state_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_FFFFDD51"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>