<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_detail_area"
    android:layout_width="match_parent"
    android:layout_height="249dp"
    android:layout_marginLeft="13dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="13dp"
    android:background="@drawable/meal_bg_shape"
    android:orientation="vertical"
    tools:showIn="@layout/meal_info_layout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="16dp"
        android:paddingRight="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:text="当前套餐"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="14dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="6dp"
                android:text="更新时间 2018/12/16 12:28"
                android:textColor="#80FFFFFF"
                android:textSize="11sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/refresh" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/meal_data_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="14dp"
        android:text="无限流量+100分钟/月 1年有效期"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/voice_remain"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/voice_remain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/voice_remain_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="分钟"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/voice_detail_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:progress="10"
            android:progressDrawable="@drawable/voice_progress_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_all"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/voice_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flow_has_use"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/voice_has_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/remain_flow"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/flow_remain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/flow_remain_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/flow_detail_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:progress="10"
            android:progressDrawable="@drawable/flow_progress_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_flow"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/flow_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flow_has_use"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/flow_have_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#CCFFFFFF"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="16dp">

        <TextView
            android:id="@+id/meal_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="套餐将于 2018/12/16 16:28:56 到期"
            android:textSize="11sp"
            android:textColor="#80FFFFFF" />

        <Button
            android:id="@+id/meal_buy"
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@mipmap/meal_buy"
            android:paddingLeft="44dp"
            android:text="套餐购买"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>
</LinearLayout>